- Cleanups

Reggie, 30.4.1999:
------------------
- More work on footnote descriptions
- typographic quotes for autocorrection are now configurable

Reggie, 1.5.1999:
-----------------
- Using new features of template dialog

Reggie, 3.5.1999:
-----------------
- Added PNG to filters when opening KFileDialog for opening a pic

Reggie, 4.5.1999:
-----------------
- Use libqimageio if present
- Improvements in the KWString class
- Started with a user defineable autocorrection functionality
  (type in (c) and see what happens :-))
- Fix when template loading goes wrong

Reggie, 6.5.1999:
-----------------
- Implemented blinking cursor
- Disabled Undo/Redo for now (it's broken at the moment)

Reggie, 12.5.1999:
------------------
- Fixed and improved Drag'n'Drop
- Fixed a problem with blinking cursor
- Implemented configuration class for advanced autocorrection

Reggie, 14.5.1999:
------------------
- Big code cleanups:
  - As my coding style was hard to read I started using a better one
  - Fixed includes (Only really neccessary headers are included in the .h files)

Reggie, 15.5.1999:
------------------
- More cosmetic fixes (mainly using a better readable coding style)

Reggie, 16.5.1999:
------------------
- Fixed some problems with toolbar icons

Reggie, 18.5.1999:
------------------
- QChar related fix

Reggie, 21.5.1999:
------------------
- The whole document needs to be calcualted at the beginning
  and when the pageformat changes
  (although this may take a bit long for large docs)
- Fixed loading templates and loading docs using the template dialog (Also stores and embedded parts
  are loaded in these cases correctly)

Reggie, 24.5.1999:
------------------
- Advanced autocorrection starts working :-)
  (It's now a bit more flexible). Only the
  configuration dialog is missing...

Reggie, 25.5.1999:
------------------
- More work on advanced autocorrection
- Started with configuration of advanced autocorrection
